# general-processor-emulator

./: .gitignore  InstructionSpecificationDesign.md  InstructionSpecificationDetailedDesign.md  NOTES.md  ProcessorSpecificationDesign.md  ProcessorSpecificationDetailedDesign.md  README.md
ProcessorEmulator/: Assembler.cpp  Assembler.hpp  Bits.cpp  Bits.hpp  CMakeLists.txt  Concepts.hpp  Conversions.cpp  Conversions.hpp  Disassembler.cpp  Disassembler.hpp  IO.cpp  IO.hpp  InstructionSet.cpp  InstructionSet.hpp  ProcessorEmulator.cpp  ProcessorEmulator.h  RegisterSet.cpp  RegisterSet.hpp  StringProcessing.cpp  StringProcessing.hpp  test_conversions.cpp  test_disassembler.cpp  test_instructionset.cpp  test_io.cpp  test_registerset.cpp  test_stringprocessing.cpp
ProcessorEmulator/DataFiles/InstructionSet/6502/: Instruction  Parameter  RegistersAssumedFromInstructionSet
